[package]
name = "concur-rtc"
description = "WebRTC datachannels with the `perfect negotiation` pattern"
authors = [ "daniel_ <cs2dsb@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/cs2dsb/concur-rtc.rs"
repository = "https://github.com/cs2dsb/concur-rtc.rs"
keywords = [ "peer-to-peer", "peer", "webrtc", "wasm"]
categories = ["asynchronous", "network-programming", "wasm", "web-programming"]
documentation = "https://docs.rs/concur-rtc"
readme = "./README.md"

[features]
default = [ "tracing", "state-events" ]
tracing = [ "dep:tracing"]
# When enabled, the stream will output state change events in addition to messages
state-events = []

[dependencies]
futures = "0.3.30"
gloo = { version = "0.11.0", features = ["timers", "utils", "futures"], default-features = false }
thiserror = "1.0.61"
tracing = { version = "0.1.40", optional = true }
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    # TODO: Trim these
    "RtcAnswerOptions", "RtcBundlePolicy", "RtcCertificate", "RtcCertificateExpiration", 
    "RtcCodecStats", "RtcConfiguration", "RtcDataChannel", "RtcDataChannelEvent", 
    "RtcDataChannelEventInit", "RtcDataChannelInit", "RtcDataChannelState", "RtcDataChannelType", 
    "RtcDegradationPreference", "RtcFecParameters", "RtcIceCandidate", "RtcIceCandidateInit", 
    "RtcIceCandidatePairStats", "RtcIceCandidateStats", "RtcIceComponentStats", 
    "RtcIceConnectionState", "RtcIceCredentialType", "RtcIceGatheringState", "RtcIceServer", 
    "RtcIceTransportPolicy", "RtcIdentityAssertion", "RtcIdentityAssertionResult", 
    "RtcIdentityProvider", "RtcIdentityProviderDetails", "RtcIdentityProviderOptions", 
    "RtcIdentityProviderRegistrar", "RtcIdentityValidationResult", "RtcInboundRtpStreamStats", 
    "RtcMediaStreamStats", "RtcMediaStreamTrackStats", "RtcOfferAnswerOptions", "RtcOfferOptions", 
    "RtcOutboundRtpStreamStats", "RtcPeerConnection", "RtcPeerConnectionIceErrorEvent", 
    "RtcPeerConnectionIceEvent", "RtcPeerConnectionIceEventInit", "RtcPeerConnectionState", 
    "RtcPriorityType", "RtcRtcpParameters", "RtcRtpCapabilities", "RtcRtpCodecCapability", 
    "RtcRtpCodecParameters", "RtcRtpContributingSource", "RtcRtpEncodingParameters", 
    "RtcRtpHeaderExtensionCapability", "RtcRtpHeaderExtensionParameters", "RtcRtpParameters", 
    "RtcRtpReceiver", "RtcRtpSender", "RtcRtpSourceEntry", "RtcRtpSourceEntryType", 
    "RtcRtpSynchronizationSource", "RtcRtpTransceiver", "RtcRtpTransceiverDirection", 
    "RtcRtpTransceiverInit", "RtcRtxParameters", "RtcSdpType", "RtcSessionDescription", 
    "RtcSessionDescriptionInit", "RtcSignalingState", "RtcStats", "RtcStatsIceCandidatePairState", 
    "RtcStatsIceCandidateType", "RtcStatsReport", "RtcStatsReportInternal", "RtcStatsType", 
    "RtcTrackEvent", "RtcTrackEventInit", "RtcTransportStats", "RtcdtmfSender", 
    "RtcdtmfToneChangeEvent", "RtcdtmfToneChangeEventInit", "RtcrtpContributingSourceStats", 
    "RtcrtpStreamStats",
] }
cfg-if = "1.0.0"
reconnecting-websocket = "0.3.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.42"

[dev-dependencies]
tracing = "0.1.40"
tracing-web = "0.1.3"
tracing-subscriber = { version = "0.3.18", features = [ "time" ] }
time = { version = "0.3.36", features = ["wasm-bindgen"] }
merge-streams = "0.1.2"

[badges]
maintenance = { status = "experimental" }
github = { repository = "cs2dsb/concur-rtc.rs" }
